--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello..world..Welcome to NGINX
+<html>
+  <head>
+    <title>Docker nginx Tutorial</title>
+  </head>
+
+  <body>
+    <div class="container">
+      <h1>welcome to NINX</h1>
+      <p>This Nginx page is to confirm the application is running</p>
+    </div>
+  </body>
+</html>
