--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <body>
     <div class="container">
-      <h1>welcome to NINX</h1>
+      <h1>welcome to NGINX</h1>
       <p>This Nginx page is to confirm the application is running</p>
     </div>
   </body>
